gofly-api/deploy/gofly-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gofly-api-service
spec:
  selector:
    app: gofly-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  #type: LoadBalancer
