gofly-api/deploy/gofly-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gofly-api-ingress
  namespace: gofly-dev
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gofly-api-service
                port:
                  number: 80
